# aqa_testomat

./: .gitignore  README.md  api-1.yaml  pyproject.toml  pytest.ini  requirements.txt  setup_auth.py
src/api/: api_client.py  projects_api.py
src/web/: App.py  app.py
src/web/components/: ProjectsCard.py  ProjectsHeaderNav.py  ProjectsProfileMenu.py  Sidebar.py  header_nav.py  profile_menu.py  projects_card.py  sidebar.py
src/web/pages/: LoginPage.py  NewProject.py  NewProjectsPage.py  ProjectPage.py  ProjectsPage.py  home_page.py  login_page.py  new_projects_page.py  project_page.py  projects_page.py
tests/: conftest.py  first_test.py  homepage_test.py  login_and_projects_test.py  second_test.py  third_test.py
tests/api/: projects_test.py
tests/fixtures/: api.py  app.py  config.py  cookie_helper.py  playwright.py
tests/web/: cookies_test.py  login_page_test.py  new_page_test.py  project_creation_test.py  projects_page_test.py
tests/web/enterprise_plan_tests/: project_creation_test.py  projects_page_test.py  switch_company_test.py
tests/web/free_plan_tests/: free_plan_test.py
